--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Order Booker</string>
+    <string name="app_name">Yalla Jeye</string>
     <string name="action_done">Done</string>
 </resources>
